# Tensor-Analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_kinematics_demo.py  02_split_space_viz.py  03_tensor_probe.py  04_tensor_glyphs.py  05_1_reconstructed_kinematics.py  05_kinematics_decomposition.py  06_field_decomposition.py  07_full_field_and_gradient.py  08_basis_transformation.py  09_principal_directions.py  10_em_stress_tensor.py  11_convective_acceleration.py  12_taylor_expansion.py  13_strain_decomposition.py  14_jacobian_validation.py  15_strain_only_acceleration.py  16_strain_tensor_field.py
src/tensor_vis/: __init__.py
src/tensor_vis/continuum/: stress.py
src/tensor_vis/core/: interp.py  tensor.py
src/tensor_vis/electromagnetism/: em_tensor.py
src/tensor_vis/fluids/: velocity_field.py
src/tensor_vis/kinematics/: jacobian.py
tests/: test_math.py
